// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`on 1`] = `
{
  "annotation": {},
  "chartType": "line",
  "config": {
    "line": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "crosshairLine": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "lineColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": false,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#606773",
          "gridWidth": 2,
          "visible": true,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#606773",
          "labelFontSize": 12,
          "labelFontWeight": 500,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 5,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": true,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#606773",
          "lineWidth": 2,
          "visible": true,
        },
        "tick": {
          "tickColor": "#606773",
          "tickInside": true,
          "tickSize": 10,
          "visible": true,
        },
        "title": {
          "titleColor": "#606773",
          "titleFontSize": 12,
          "titleFontWeight": 500,
          "titleText": "日期",
          "visible": true,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "line": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "crosshairLine": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "lineColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-01",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-01",
      "profit": 10,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-01",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-01",
      "sales": 20,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-02",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-02",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-02",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-02",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-03",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-03",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-03",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-03",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-04",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-04",
      "profit": 50,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-04",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-04",
      "sales": 100,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-05",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-05",
      "profit": 40,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-05",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-05",
      "sales": 80,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-06",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-06",
      "profit": 10,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-06",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-06",
      "sales": 20,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-07",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-07",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-07",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-07",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-08",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-08",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-08",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-08",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-09",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-09",
      "profit": 50,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-09",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-09",
      "sales": 100,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-10",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-10",
      "profit": 40,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-10",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-10",
      "sales": 80,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-11",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-11",
      "profit": 10,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-11",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-11",
      "sales": 20,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-12",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-12",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-12",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-12",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-13",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-13",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-13",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-13",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-14",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-14",
      "profit": 50,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-14",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-14",
      "sales": 100,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-15",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-15",
      "profit": 40,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-15",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-15",
      "sales": 80,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-16",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-16",
      "profit": 10,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-16",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-16",
      "sales": 20,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-17",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-17",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-17",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-17",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-18",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-18",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-18",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-18",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-19",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-19",
      "profit": 50,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-19",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-19",
      "sales": 100,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-20",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-20",
      "profit": 40,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-20",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-20",
      "sales": 80,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-21",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-21",
      "profit": 10,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-21",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-21",
      "sales": 20,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-22",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-22",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-22",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-22",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-23",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-23",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-23",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-23",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-24",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-24",
      "profit": 50,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-24",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-24",
      "sales": 100,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-25",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-25",
      "profit": 40,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-25",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-25",
      "sales": 80,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-26",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-26",
      "profit": 10,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-26",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-26",
      "sales": 20,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-27",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-27",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-27",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-27",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019-01-28",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-28",
      "profit": 30,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019-01-28",
        "profit": 30,
        "sales": 60,
      },
      "date": "2019-01-28",
      "sales": 60,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019-01-29",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-29",
      "profit": 50,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019-01-29",
        "profit": 50,
        "sales": 100,
      },
      "date": "2019-01-29",
      "sales": 100,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019-01-30",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-30",
      "profit": 40,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019-01-30",
        "profit": 40,
        "sales": 80,
      },
      "date": "2019-01-30",
      "sales": 80,
    },
    {
      "__DimGroupID__": "profit-profit",
      "__DimGroup__": "profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019-01-31",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-31",
      "profit": 10,
    },
    {
      "__DimGroupID__": "sales-sales",
      "__DimGroup__": "sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019-01-31",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019-01-31",
      "sales": 20,
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "profit",
          "sales": "sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "2D1M",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "profit-profit": "profit",
          "sales-sales": "sales",
        },
        "colorItems": [
          "profit-profit",
          "sales-sales",
        ],
        "groupId": "__DimGroupID__",
        "groupName": "__DimGroup__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
      "location": "dimension",
    },
  ],
  "encoding": [
    {
      "color": [
        "__MeaName__",
      ],
      "group": [
        "__DimGroupID__",
      ],
      "x": [
        "date",
      ],
      "y": [
        "__MeaValue__",
      ],
    },
  ],
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "profit",
      "id": "profit",
    },
    {
      "alias": "sales",
      "id": "sales",
    },
  ],
}
`;

exports[`on 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 2,
          "stroke": "#606773",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 2,
          "stroke": "#606773",
        },
        "visible": true,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 5,
        "autoLimit": true,
        "autoRotate": true,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 5,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#606773",
          "fontSize": 12,
          "fontWeight": 500,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": true,
        "style": {
          "stroke": "#606773",
        },
        "tickSize": 10,
        "visible": true,
      },
      "title": {
        "style": {
          "fill": "#606773",
          "fontSize": 12,
          "fontWeight": 500,
        },
        "text": "日期",
        "visible": true,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "profit-profit",
      "sales-sales",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 1,
          "opacity": 1,
          "stroke": "#3641594d",
        },
        "type": "line",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__DimGroupID__": {
        "sortIndex": 0,
      },
      "date": {
        "sortIndex": 0,
      },
    },
    "id": "2D1M",
    "values": [
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-01",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-01",
        "profit": 10,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-01",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-01",
        "sales": 20,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-02",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-02",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-02",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-02",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-03",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-03",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-03",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-03",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-04",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-04",
        "profit": 50,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-04",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-04",
        "sales": 100,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-05",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-05",
        "profit": 40,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-05",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-05",
        "sales": 80,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-06",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-06",
        "profit": 10,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-06",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-06",
        "sales": 20,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-07",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-07",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-07",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-07",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-08",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-08",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-08",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-08",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-09",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-09",
        "profit": 50,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-09",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-09",
        "sales": 100,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-10",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-10",
        "profit": 40,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-10",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-10",
        "sales": 80,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-11",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-11",
        "profit": 10,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-11",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-11",
        "sales": 20,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-12",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-12",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-12",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-12",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-13",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-13",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-13",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-13",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-14",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-14",
        "profit": 50,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-14",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-14",
        "sales": 100,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-15",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-15",
        "profit": 40,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-15",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-15",
        "sales": 80,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-16",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-16",
        "profit": 10,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-16",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-16",
        "sales": 20,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-17",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-17",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-17",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-17",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-18",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-18",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-18",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-18",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-19",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-19",
        "profit": 50,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-19",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-19",
        "sales": 100,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-20",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-20",
        "profit": 40,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-20",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-20",
        "sales": 80,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-21",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-21",
        "profit": 10,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-21",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-21",
        "sales": 20,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-22",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-22",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-22",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-22",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-23",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-23",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-23",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-23",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-24",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-24",
        "profit": 50,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-24",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-24",
        "sales": 100,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-25",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-25",
        "profit": 40,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-25",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-25",
        "sales": 80,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-26",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-26",
        "profit": 10,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-26",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-26",
        "sales": 20,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-27",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-27",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-27",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-27",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019-01-28",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-28",
        "profit": 30,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019-01-28",
          "profit": 30,
          "sales": 60,
        },
        "date": "2019-01-28",
        "sales": 60,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019-01-29",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-29",
        "profit": 50,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019-01-29",
          "profit": 50,
          "sales": 100,
        },
        "date": "2019-01-29",
        "sales": 100,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019-01-30",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-30",
        "profit": 40,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019-01-30",
          "profit": 40,
          "sales": 80,
        },
        "date": "2019-01-30",
        "sales": 80,
      },
      {
        "__DimGroupID__": "profit-profit",
        "__DimGroup__": "profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019-01-31",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-31",
        "profit": 10,
      },
      {
        "__DimGroupID__": "sales-sales",
        "__DimGroup__": "sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019-01-31",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019-01-31",
        "sales": 20,
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": false,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "point": {
    "state": {
      "dimension_hover": {
        "outerBorder": {
          "distance": 2,
          "lineWidth": 4,
          "strokeOpacity": 0.25,
        },
        "scaleX": 1.4,
        "scaleY": 1.4,
      },
    },
  },
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__DimGroupID__",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "line",
  "xField": "date",
  "yField": "__MeaValue__",
}
`;
